--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -1,5 +1,19 @@
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
+  --ast-c-very-dark-blue: #1b1d23;
+  --ast-c-dark-grey: #60636d;
+  --ast-c-medium-grey: #7d828f;
+  --ast-c-light-grey: #c8ccd8;
+  --ast-c-very-light-grey: #eeeff4;
+  --ast-c-red: #df5656;
+  --ast-c-white: #ffffff;
+
+  --ast-c-text: var(--ast-c-dark-grey);
+  --ast-c-text-heading: var(--ast-c-very-dark-blue);
+  --ast-c-text-heading-xl: var(--ast-c-light-grey);
+
+  /* --------------------- */
+
   --vt-c-white: #ffffff;
   --vt-c-white-soft: #f8f8f8;
   --vt-c-white-mute: #f2f2f2;
@@ -23,20 +37,73 @@
 
 /* semantic color variables for this project */
 :root {
-  --color-background: var(--vt-c-white);
+  --color-text: var(--ast-c-dark-grey);
+  --color-heading: var(--ast-c-very-dark-blue);
+
+  --color-background: #f2f2f2;
+
+  --color-background-button-normal: var(--ast-c-very-dark-blue);
+  --color-background-button-hover: var(--ast-c-dark-grey);
+  --color-background-button-active: var(--ast-c-light-grey);
+  --color-text-button: var(var(--ast-c-white));
+
+  --font-size-text: 18px;
+  --font-size-heading-xl: 120px;
+  --font-size-heading-l: 48px;
+  --font-size-heading-m: 48px;
+  --font-size-heading-s: 32px;
+
+  --line-height-text:24px;
+  --line-height-heading-xl: 200px;
+  --line-height-heading-l: 48px;
+  --line-height-heading-m: 52px;
+  --line-height-heading-s:40px;
+
+  --letter-spacing-text: 0px;
+  --letter-spacing-heading-xl: 0px;
+  --letter-spacing-heading-l: 1.2px;
+  --letter-spacing-heading-m: -1.71px;
+  --letter-spacing-heading-s: 0px;
+  
+  /* --color-background: var(--vt-c-white);
   --color-background-soft: var(--vt-c-white-soft);
   --color-background-mute: var(--vt-c-white-mute);
-
+  
   --color-border: var(--vt-c-divider-light-2);
   --color-border-hover: var(--vt-c-divider-light-1);
 
   --color-heading: var(--vt-c-text-light-1);
   --color-text: var(--vt-c-text-light-1);
 
-  --section-gap: 160px;
+  --section-gap: 160px; */
 }
 
-@media (prefers-color-scheme: dark) {
+@media (min-width: 48em) {
+  :root {
+    --font-size-heading-l: 96px;
+    --font-size-heading-m: 72px;
+
+    --line-height-heading-l: 80px;
+    --line-height-heading-m: 64px;
+    --line-height-heading-s:40px;
+
+    --letter-spacing-heading-xl: -3px;
+     --letter-spacing-heading-l: -2px;
+  --letter-spacing-heading-m: -2px;
+
+  }
+}
+
+@media (min-width: 90em) {
+  :root {
+    --font-size-heading-xl: 250px;
+
+    --letter-spacing-heading-xl: -5px;
+
+  }
+}
+
+/* @media (prefers-color-scheme: dark) {
   :root {
     --color-background: var(--vt-c-black);
     --color-background-soft: var(--vt-c-black-soft);
@@ -48,6 +115,10 @@
     --color-heading: var(--vt-c-text-dark-1);
     --color-text: var(--vt-c-text-dark-2);
   }
+} */
+
+html {
+  font-size: 62.5%;
 }
 
 
@@ -62,7 +133,8 @@ body {
   font-family: "League Spartan", sans-serif;
   font-style: normal;
 
-  font-size: 15px;
+  font-size: var(--font-size-text);
+  font-weight: 500;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
