chore: Remove unused code and update styles in App.vue

--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -11,28 +11,6 @@
   --ast-c-text: var(--ast-c-dark-grey);
   --ast-c-text-heading: var(--ast-c-very-dark-blue);
   --ast-c-text-heading-xl: var(--ast-c-light-grey);
-
-  /* --------------------- */
-
-  --vt-c-white: #ffffff;
-  --vt-c-white-soft: #f8f8f8;
-  --vt-c-white-mute: #f2f2f2;
-
-  --vt-c-black: #181818;
-  --vt-c-black-soft: #222222;
-  --vt-c-black-mute: #282828;
-
-  --vt-c-indigo: #2c3e50;
-
-  --vt-c-divider-light-1: rgba(60, 60, 60, 0.29);
-  --vt-c-divider-light-2: rgba(60, 60, 60, 0.12);
-  --vt-c-divider-dark-1: rgba(84, 84, 84, 0.65);
-  --vt-c-divider-dark-2: rgba(84, 84, 84, 0.48);
-
-  --vt-c-text-light-1: var(--vt-c-indigo);
-  --vt-c-text-light-2: rgba(60, 60, 60, 0.66);
-  --vt-c-text-dark-1: var(--vt-c-white);
-  --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
 }
 
 /* semantic color variables for this project */
@@ -47,35 +25,25 @@
   --color-background-button-active: var(--ast-c-light-grey);
   --color-text-button: var(var(--ast-c-white));
 
+  --color-page-watermark: var(var(--ast-c-light-grey));
+
   --font-size-text: 18px;
   --font-size-heading-xl: 120px;
   --font-size-heading-l: 48px;
   --font-size-heading-m: 48px;
   --font-size-heading-s: 32px;
 
-  --line-height-text:24px;
+  --line-height-text: 24px;
   --line-height-heading-xl: 200px;
   --line-height-heading-l: 48px;
   --line-height-heading-m: 52px;
-  --line-height-heading-s:40px;
+  --line-height-heading-s: 40px;
 
   --letter-spacing-text: 0px;
   --letter-spacing-heading-xl: 0px;
   --letter-spacing-heading-l: 1.2px;
   --letter-spacing-heading-m: -1.71px;
   --letter-spacing-heading-s: 0px;
-  
-  /* --color-background: var(--vt-c-white);
-  --color-background-soft: var(--vt-c-white-soft);
-  --color-background-mute: var(--vt-c-white-mute);
-  
-  --color-border: var(--vt-c-divider-light-2);
-  --color-border-hover: var(--vt-c-divider-light-1);
-
-  --color-heading: var(--vt-c-text-light-1);
-  --color-text: var(--vt-c-text-light-1);
-
-  --section-gap: 160px; */
 }
 
 @media (min-width: 48em) {
@@ -85,12 +53,11 @@
 
     --line-height-heading-l: 80px;
     --line-height-heading-m: 64px;
-    --line-height-heading-s:40px;
+    --line-height-heading-s: 40px;
 
     --letter-spacing-heading-xl: -3px;
-     --letter-spacing-heading-l: -2px;
-  --letter-spacing-heading-m: -2px;
-
+    --letter-spacing-heading-l: -2px;
+    --letter-spacing-heading-m: -2px;
   }
 }
 
@@ -99,41 +66,20 @@
     --font-size-heading-xl: 250px;
 
     --letter-spacing-heading-xl: -5px;
-
   }
 }
-
-/* @media (prefers-color-scheme: dark) {
-  :root {
-    --color-background: var(--vt-c-black);
-    --color-background-soft: var(--vt-c-black-soft);
-    --color-background-mute: var(--vt-c-black-mute);
-
-    --color-border: var(--vt-c-divider-dark-2);
-    --color-border-hover: var(--vt-c-divider-dark-1);
-
-    --color-heading: var(--vt-c-text-dark-1);
-    --color-text: var(--vt-c-text-dark-2);
-  }
-} */
 
 html {
   font-size: 62.5%;
 }
 
-
-
 body {
-  min-height: 100vh;
   color: var(--color-text);
   background: var(--color-background);
-  transition:
-    color 0.5s,
-    background-color 0.5s;
-  font-family: "League Spartan", sans-serif;
-  font-style: normal;
-
   font-size: var(--font-size-text);
+  font-family: 'League Spartan', sans-serif;
+  font-style: normal;
+  line-height: var(--line-height-text);
   font-weight: 500;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
