--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -18,7 +18,7 @@
     --color-text: var(--ast-c-dark-grey);
     --color-heading: var(--ast-c-very-dark-blue);
 
-    --color-background: #f2f2f2;
+    --color-background: var(--ast-c-white);
     --color-background-menu: var(--ast-c-very-light-grey);
 
     --color-background-button-normal: var(--ast-c-very-dark-blue);
