--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -85,5 +85,5 @@ body {
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    width: 100vw;
+    /*width: 100vw;*/
 }
