--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -81,6 +81,7 @@ body {
     font-family: 'League Spartan', sans-serif;
     font-style: normal;
     line-height: var(--line-height-text);
+    letter-spacing: var(--letter-spacing-text);
     font-weight: 500;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
