--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -88,3 +88,8 @@ body {
     -moz-osx-font-smoothing: grayscale;
     /*width: 100vw;*/
 }
+
+h1, h2, h3, h4, h5, h6 {
+    font-weight: bold;
+    color: var(--color-heading);
+}
